# fastscanner

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODOS.md  docker-compose.yml  logging.yaml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
deploy/observability/: otel-collector.yaml  prometheus.yml
docs/architecture/: C4 Diagram.drawio  benchmark_comparison_csv_parquet.md  benchmark_comparison_csv_parquet_memmap.md  benchmark_comparison_polygon_realtime.md  benchmark_scanner.md  polars_pandas_benchmark_analysis.md  redis_runbook.md  redis_socket_vs_tcp_benchmark.md
docs/performance_comparison/: dict_impl.csv  pd_series.csv  scanner_realtime_comparison_report.md
docs/profiler/: profiling_analysis_report.md  run_book.md
fastscanner/adapters/cache/: dragonfly.py
fastscanner/adapters/candle/: config.py  massive_adjusted.py  memmap.py  parquet.py  partitioned_csv.py  partitioned_csv_polars.py  partitioned_memmap.py  partitioned_parquet.py  polygon.py  polygon_trades.py
fastscanner/benchmarks/: benchmark_polygon_realtime.py  benchmark_realtime_subscribe.py  benchmark_redis_read.py  benchmark_scanner.py  benchmark_scanner_realtime.py  calculate_indicators.py  data_benchmarking.py  polars_pandas_benchmark.py  real_time_channel_handler.py
fastscanner/client/: __init__.py  candle.py  example.py  indicators.py  scanner.py  websocket_client.py
fastscanner/pkg/: candle.py  clock.py  config.py  datetime.py  http.py  localize.py  logging.py  ratelimit.py  types.py  websockets.py
fastscanner/profiler/: __init__.py  cli.py  profiler.py  profiling_analysis_report.md
fastscanner/services/: exceptions.py  registry.py
fastscanner/tests/: test_eodhd_fundamental_store.py  test_exchange_calendar_public_holiday.py  test_partitioned_csv_provider.py
(+131 files in other folders)
