[tool.poetry]
name = "fastscanner"
version = "0.1.0"
description = ""
authors = ["Daniel Fonnegra <dfonnegrag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "2.2.4"
python-dotenv = "^1.1.0"
httpx = "^0.28.1"
pyyaml = "^6.0.2"
pyarrow="^19.0.1"
pytest= "^8.3.5"
requests= "2.32.3"


[tool.poetry.group.dev.dependencies]
ipython = "^9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
