[tool.poetry]
name = "fastscanner"
version = "0.1.0"
description = ""
authors = ["Daniel Fonnegra <dfonnegrag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "2.2.4"
python-dotenv = "^1.1.0"
httpx = "^0.28.1"
pyyaml = "^6.0.2"
pyarrow="^19.0.1"
pytest= "^8.3.5"
fastapi = {extras = ["standard"], version = "^0.115.12"}
exchange-calendars= "^4.10"
redis="^5.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^9.1.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
