[tool.poetry]
name = "fastscanner"
version = "0.1.0"
description = ""
authors = ["Daniel Fonnegra <dfonnegrag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.3.0"
numpy = "2.2.4"
python-dotenv = "^1.1.0"
httpx = "^0.28.1"
pyyaml = "^6.0.2"
pyarrow="^19.0.1"
fastapi = {extras = ["standard"], version = "^0.116.1"}
exchange-calendars= "^4.10"
redis="^5.2.1"
polygon-api-client= "^1.15.3"
polars = "^1.31.0"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ipython = "^9.1.0"
coverage = "^7.8.0"
pytest= "^8.3.5"
pytest-asyncio= "^0.26.0"
austin-dist = "^3.7.0"
austin-python = "^1.7.1"
austin-tui = "^1.3.0"
austin-web = "^0.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["test_*.py"]
